--- a/gamestation.css
+++ b/gamestation.css
@@ -24,7 +24,7 @@ h4 {
 }
 
 .homepage-background {
-	background: linear-gradient(to right,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("switch2.jpg") no-repeat fixed center;
+	background: linear-gradient(to right,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("assets/img/switch2.jpg") no-repeat fixed center;
 	padding: 120px 0;
 	text-align: center;
 }
