--- a/gamestation.css
+++ b/gamestation.css
@@ -4,22 +4,24 @@ body {
 
 html {
 	scroll-behavior: smooth;
-  }
+}
 
-h2, h4, h3 {
+h4, h3 {
 	text-align: center;
 	text-transform: uppercase;
 	font-family: tomorrow;
 	color: white;
 }
 
-h2 {
-	font-size: 70px;
-}
-
 h4 {
 	padding-top: 10px;
 	font-size: 20px;
+	font-weight: bold;
+}
+
+h3 {
+	color: black;
+	font-size: 50px;
 	font-weight: bold;
 }
 
@@ -29,21 +31,14 @@ h4 {
 	text-align: center;
 }
 
-h1 {
-	text-align: center;
-	text-transform: uppercase;
-	font-family: tomorrow;
+.navbar-nav .nav-item.nav-link,
+.navbar-nav .nav-item.nav-link:hover,
+.navbar-nav .nav-item.nav-link:focus{
 	color: white;
 	font-weight: bold;
-}
-
-.about {
-	padding: 180px 0;
-	background: #060B15;
-}
-
-.about-us {
-	color: white;
+	font-size: 14px;
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 .btn-gsprimary,
@@ -65,37 +60,12 @@ h1 {
 	transition: 0.5s;
 }
 
-.navbar-nav .nav-item.nav-link,
-.navbar-nav .nav-item.nav-link:hover,
-.navbar-nav .nav-item.nav-link:focus{
-	color: white;
-	font-weight: bold;
-	font-size: 14px;
-	padding-left: 30px;
-	padding-right: 30px;
-}
-
-#whatIs {
+#about {
 	padding: 60px;
 }
 
-#whatIs h3{
+#about h4{
 	color: black;
-	font-size: 50px;
-	font-weight: bold;
-	padding-bottom: 20px;
-}
-
-#whatIs h4{
-	color: black;
-}
-
-#contact {
-	padding: 30px;
-	background: #0C1A31;
-	color: white;
-	text-align: center;
-	letter-spacing: 15px;
 }
 
 .fa-gamepad {
@@ -111,15 +81,7 @@ h1 {
 }
 
 #gallery {
-	background-color: #FFFFFF;
 	padding-bottom: 80px;
-}
-
-#gallery h3 {
-	color: black;
-	font-size: 50px;
-	font-weight: bold;
-	padding-bottom: 50px;
 }
 
 #gallery img {
@@ -134,21 +96,15 @@ h1 {
 	opacity: 1;
 }
 
-#booking {
+#meet-owners {
 	padding-bottom: 80px;
 	text-align: center;
 }
 
-#booking h3 {
-	color: black;
-	font-size: 50px;
-	font-weight: bold;
-	padding-bottom: 60px;
-}
-
-#booking textarea {
-	resize: none;
-	height: 180px;
+#meet-owners img {
+	width: 100%;
+	border-radius: 50%;
+	margin: 30px 0;
 }
 
 .full-width {
@@ -162,10 +118,12 @@ h1 {
 
 .fa-facebook-f:hover, .fa-twitter:hover, .fa-instagram:hover {
 	color: #17C3F6;
-	
 }
 
-.copyright {
-	letter-spacing: 0px;
+#contact {
+	padding: 20px;
+	background: #0C1A31;
+	color: white;
+	text-align: center;
 	font-weight: bold;
 }
