--- a/gamestation.css
+++ b/gamestation.css
@@ -6,29 +6,27 @@ html {
 	scroll-behavior: smooth;
 }
 
-h4, h3 {
-	text-align: center;
-	text-transform: uppercase;
-	font-family: tomorrow;
-	color: white;
-}
-
-h4 {
-	padding-top: 10px;
-	font-size: 20px;
-	font-weight: bold;
-}
-
 h3 {
 	color: black;
 	font-size: 50px;
 	font-weight: bold;
+	font-family: tomorrow;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+h4 {
+	font-weight: bold;
+	font-family: tomorrow;
+	text-transform: uppercase;
+	text-align: center;
 }
 
 .homepage-background {
-	background: linear-gradient(to right,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("assets/img/switch2.jpg") no-repeat fixed center;
-	padding: 120px 0;
+	background: linear-gradient(to right,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("assets/img/switch.jpg") no-repeat fixed center;
+	padding: 180px 0;
 	text-align: center;
+	color: white;
 }
 
 .navbar-nav .nav-item.nav-link,
@@ -47,7 +45,7 @@ h3 {
 	background-color: #17C3F6;
 	color: white;
 	border-color: #17C3F6;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: bold;
 	text-transform: uppercase;
 	padding: 10px 40px;
@@ -64,51 +62,103 @@ h3 {
 	padding: 60px;
 }
 
-#about h4{
-	color: black;
+.features {
+	text-align: center;
+	width: 33.33%;
+	padding: 10px 10px;
 }
 
 .fa-gamepad {
 	color: #17C3F6;
+	padding-bottom: 15px;
 }
 
 .fa-birthday-cake {
 	color: #FF465F;
+	padding-bottom: 15px;
 }
 
 .fa-map {
 	color: #1CB58A;
+	padding-bottom: 15px;
 }
 
 #gallery {
 	padding-bottom: 80px;
 }
 
-#gallery img {
+/* #gallery img {
 	opacity: .75;
 	transition: all .5s ease-in-out;
 	display: inline-block;
 	margin-bottom: 30px;
+	margin-top: 30px;
 	width: 100%;
 }
 
 #gallery img:hover {
 	opacity: 1;
-}
+} */
 
-#meet-owners {
+.grid {
+	display: grid;
+	grid-template-rows: 
+	  repeat(4, 180px);
+	grid-template-columns: 
+	  repeat(3, 1fr);
+	grid-gap: 5px;
+  }
+  
+  .item:nth-child(1) {
+	grid-row: 1 / 4;
+  }
+  
+  .item:nth-child(2) {
+	grid-column: 2 / 4;
+	grid-row: 1 / 3;
+  }
+  
+  .item:nth-child(3) {
+	grid-column: 3 / 4;
+	grid-row: 3 / 5;
+  }
+  
+  .item:nth-child(4) {
+	grid-column: 2 / 3;
+	grid-row: 3 / 4;
+  }
+  
+  .item:nth-child(5) {
+	grid-column: 1 / 3;
+	grid-row: 4 / 5;
+  }
+  
+  /* styling code */
+  
+  .grid {
+	margin:20px auto;
+	max-width:1000px;
+	padding-top: 30px;
+  }
+  
+  .grid > .item {
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+  }
+
+#team {
 	padding-bottom: 80px;
-	text-align: center;
 }
 
-#meet-owners img {
+#team img {
 	width: 100%;
 	border-radius: 50%;
 	margin: 30px 0;
 }
 
-.full-width {
-	width: 100%;
+#team li {
+	width: 500px;
 }
 
 .fa-facebook-f, .fa-twitter, .fa-instagram {
@@ -120,10 +170,26 @@ h3 {
 	color: #17C3F6;
 }
 
-#contact {
-	padding: 20px;
+.social li {
+	display: inline-block;
+	letter-spacing: 20px;
+}
+
+.social, .contact p {
+	font-weight: bold;
+}
+
+.contact {
+	list-style: none;
+}
+
+#footer {
+	padding: 30px;
 	background: #0C1A31;
 	color: white;
+}
+
+.footer-content {
 	text-align: center;
-	font-weight: bold;
+	/* margin-top: 100px; */
 }
