--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,8 @@
-body {
+body, html {
   font-family: lato;
   height: 100%;
   width: 100%;
-}
-
-html {
   scroll-behavior: smooth;
-  height: 100%;
-  width: 100%;
-}
-
-h3 {
-  color: black;
-  font-size: 50px;
-  font-weight: bold;
-  font-family: tomorrow;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-h4 {
-  font-weight: bold;
-  font-family: tomorrow;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.background {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-  url("../img/switch.jpg") no-repeat fixed center;
-  padding: 200px 0;
-  text-align: center;
-  color: white;
-  height: 100%;
 }
 
 .navbar-nav .nav-item.nav-link,
@@ -51,10 +21,6 @@ h4 {
   transition: all 0.2s;
 }
 
-.navbar-nav .nav-item.nav-link:active {
-  font-weight: bold;
-}
-
 .opaque-nav {
   background-color: #fff;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
@@ -63,6 +29,43 @@ h4 {
 
 .opaque-nav .nav-item.nav-link {
   color: black;
+}
+
+h1 {
+  color: black;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: tomorrow;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+h4 {
+  font-weight: bold;
+  font-family: tomorrow;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.background {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url("../img/switch.jpg") no-repeat fixed center;
+  background-size: cover;
+  text-align: center;
+  color: white;
+}
+
+@media (min-width: 992px) {
+.background {
+    height: 100vh;
+    min-height: 40rem;
+    padding-top: 72px;
+    padding-bottom: 0;
+  }
+}
+
+.logo {
+  padding-top: 50px;
 }
 
 .btn-gsprimary,
@@ -84,7 +87,7 @@ h4 {
   transition: 0.5s;
 }
 
-/* ABOUT */
+/************************************ ABOUT ************************************/
 #about {
   padding: 60px;
   text-align: center;
@@ -105,12 +108,59 @@ h4 {
   padding-bottom: 15px;
 }
 
-/* GALLERY */
+/************************************ GALLERY ************************************/
 #gallery {
   padding-bottom: 80px;
 }
 
-.grid {
+#photos {
+  /* Prevent vertical gaps */
+  line-height: 0;
+  
+  -webkit-column-count: 5;
+  -webkit-column-gap:   0px;
+  -moz-column-count:    5;
+  -moz-column-gap:      0px;
+  column-count:         4;
+  column-gap:           0px;  
+}
+
+#photos img {
+  /* Just in case there are inline attributes */
+  width: 100% !important;
+  height: auto !important;
+}
+
+@media (max-width: 1200px) {
+  #photos {
+  -moz-column-count:    4;
+  -webkit-column-count: 4;
+  column-count:         4;
+  }
+}
+@media (max-width: 1000px) {
+  #photos {
+  -moz-column-count:    3;
+  -webkit-column-count: 3;
+  column-count:         3;
+  }
+}
+@media (max-width: 800px) {
+  #photos {
+  -moz-column-count:    2;
+  -webkit-column-count: 2;
+  column-count:         2;
+  }
+}
+@media (max-width: 400px) {
+  #photos {
+  -moz-column-count:    1;
+  -webkit-column-count: 1;
+  column-count:         1;
+  }
+}
+
+/* .grid {
   display: grid;
   grid-template-rows: repeat(4, 280px);
   grid-template-columns: repeat(3, 1fr);
@@ -139,11 +189,11 @@ h4 {
 .item:nth-child(5) {
   grid-column: 1 / 3;
   grid-row: 4 / 5;
-}
+} */
 
 /* styling code */
 
-.grid {
+/* .grid {
   margin: 30px auto;
   max-width: 1300px;
   padding-top: 30px;
@@ -153,9 +203,9 @@ h4 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
-/* MEET THE TEAM */
+/************************************ MEET THE TEAM ************************************/
 #team {
   padding-bottom: 80px;
   text-align: center;
@@ -168,7 +218,6 @@ h4 {
 }
 
 #team li {
-  width: 500px;
   list-style: none;
   text-align: left;
 }
@@ -177,7 +226,7 @@ h4 {
   font-weight: bold;
 }
 
-/* FOOTER */
+/************************************ FOOTER ************************************/
 #footer {
   padding: 25px;
   background: #0c1a31;
