--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,271 +1,346 @@
-body, html {
-  font-family: lato;
-  height: 100%;
-  width: 100%;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  font-family: lato, sans-serif;
   scroll-behavior: smooth;
 }
 
-.navbar-nav .nav-item.nav-link,
-.navbar-nav .nav-item.nav-link:focus {
-  color: white;
-  font-weight: 500;
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.navbar-nav .nav-item.nav-link:hover {
-  color: #000000;
-  transition: all 0.2s;
-}
-
-.opaque-nav {
+.nav {
   background-color: #fff;
+  position: fixed;
+  padding: 70px 50px;
+  width: 100%;
+  display: none;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  transition: background-color 0.2s ease;
 }
 
-.opaque-nav .nav-item.nav-link {
-  color: black;
+.nav-toggle {
+  position: fixed;
+  z-index: 100;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  color: #000000;
+  font-size: 30px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.nav-list {
+  list-style-type: none;
+  text-align: right;
+}
+
+.nav-list li {
+  margin-bottom: 5px;
+}
+
+.nav-content {
+  float: right;
+}
+
+.nav-links {
+  color: #000000;
+  font-family: tomorrow;
+  font-size: 25px;
+  text-decoration: none;
+}
+
+.nav-links:hover {
+  color: #333333;
+}
+
+.nav-social .fab {
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
+  align-items: right;
+  padding: 10px;
+  margin: 12px 0 0 5px;
+  width: 40px;
+  border-radius: 50%;
+}
+
+.nav-social .fab:hover {
+  color: #fff;
+}
+
+.fa-nav-f {
+  background-color: #395598;
+}
+
+.fa-nav-t {
+  background-color: #1d9eeb;
+}
+
+.fa-nav-i {
+  background-color: #c8245d;
 }
 
 h1 {
-  color: black;
-  font-size: 50px;
-  font-weight: bold;
+  color: #000000;
   font-family: tomorrow;
+  font-size: 40px;
   text-transform: uppercase;
-  text-align: center;
+  padding: 30px 0;
 }
 
-h4 {
-  font-weight: bold;
+h2 {
+  color: #ffffff;
   font-family: tomorrow;
   text-transform: uppercase;
-  text-align: center;
+  padding: 30px 0 40px 0;
 }
 
-.background {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-  url("../img/switch.jpg") no-repeat fixed center;
+h3 {
+  color: #000000;
+  font-family: tomorrow;
+  font-size: 21px;
+  text-transform: uppercase;
+}
+
+#header {
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url("../img/nintendo-switch-joycons.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
   background-size: cover;
   text-align: center;
-  color: white;
+  height: 100vh;
+  padding-top: 100px;
 }
 
-@media (min-width: 992px) {
-.background {
-    height: 100vh;
-    min-height: 40rem;
-    padding-top: 72px;
-    padding-bottom: 0;
-  }
-}
-
-.logo {
-  padding-top: 50px;
-}
-
-.btn-gsprimary,
-.btn-gsprimary:focus,
-.btn-gsprimary:visited {
+.start-button,
+.start-button:focus,
+.start-button:visited {
   background-color: #17c3f6;
-  color: #fff;
   border-color: #17c3f6;
-  font-size: 18px;
+  border: 1px solid #17c3f6;
+  color: #ffffff;
+  font-family: tomorrow;
   font-weight: bold;
+  font-size: 18px;
   text-transform: uppercase;
-  padding: 10px 40px;
   border-radius: 40px;
+  outline: none;
+  cursor: pointer;
+  padding: 10px 40px;
+  transition: 0.5s ease-in-out;
 }
 
-.btn-gsprimary:hover {
-  color: #fff;
+.start-button:hover {
   box-shadow: 0px 0px 40px #17c3f6;
-  transition: 0.5s;
 }
 
-/************************************ ABOUT ************************************/
 #about {
-  padding: 60px;
   text-align: center;
+  padding: 30px 0 30px 0;
+}
+
+#about p,
+#about i,
+#about h3 {
+  margin-bottom: 15px;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 50px;
+}
+
+.flex-item {
+  flex: 1;
+  width: 32%;
+  padding: 0 40px 0 40px;
 }
 
 .fa-gamepad {
   color: #17c3f6;
-  padding-bottom: 15px;
 }
 
 .fa-birthday-cake {
   color: #ff465f;
-  padding-bottom: 15px;
 }
 
 .fa-map {
   color: #1cb58a;
-  padding-bottom: 15px;
 }
 
-/************************************ GALLERY ************************************/
 #gallery {
-  padding-bottom: 80px;
+  text-align: center;
+  padding: 30px 0 30px 0;
 }
 
-#photos {
-  /* Prevent vertical gaps */
-  line-height: 0;
-  
-  -webkit-column-count: 5;
-  -webkit-column-gap:   0px;
-  -moz-column-count:    5;
-  -moz-column-gap:      0px;
-  column-count:         4;
-  column-gap:           0px;  
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-#photos img {
-  /* Just in case there are inline attributes */
-  width: 100% !important;
-  height: auto !important;
+#gallery img {
+  margin: 5px;
+  transition: all 1s;
 }
 
-@media (max-width: 1200px) {
-  #photos {
-  -moz-column-count:    4;
-  -webkit-column-count: 4;
-  column-count:         4;
-  }
-}
-@media (max-width: 1000px) {
-  #photos {
-  -moz-column-count:    3;
-  -webkit-column-count: 3;
-  column-count:         3;
-  }
-}
-@media (max-width: 800px) {
-  #photos {
-  -moz-column-count:    2;
-  -webkit-column-count: 2;
-  column-count:         2;
-  }
-}
-@media (max-width: 400px) {
-  #photos {
-  -moz-column-count:    1;
-  -webkit-column-count: 1;
-  column-count:         1;
-  }
+#gallery img:hover {
+  transform: scale(1.1);
 }
 
-/* .grid {
-  display: grid;
-  grid-template-rows: repeat(4, 280px);
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-}
-
-.item:nth-child(1) {
-  grid-row: 1 / 4;
-}
-
-.item:nth-child(2) {
-  grid-column: 2 / 4;
-  grid-row: 1 / 3;
-}
-
-.item:nth-child(3) {
-  grid-column: 3 / 4;
-  grid-row: 3 / 5;
-}
-
-.item:nth-child(4) {
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
-}
-
-.item:nth-child(5) {
-  grid-column: 1 / 3;
-  grid-row: 4 / 5;
-} */
-
-/* styling code */
-
-/* .grid {
-  margin: 30px auto;
-  max-width: 1300px;
-  padding-top: 30px;
-}
-
-.grid > .item {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
-
-/************************************ MEET THE TEAM ************************************/
 #team {
-  padding-bottom: 80px;
   text-align: center;
 }
 
 #team img {
-	width: 100%;
-	border-radius: 50%;
-	margin: 30px 0;
+  width: 320px;
+  height: 320px;
+  border-radius: 50%;
+  margin: 30px 0;
+}
+
+#team ul {
+  width: 50%;
+  margin: 0 auto;
 }
 
 #team li {
-  list-style: none;
+  list-style-type: none;
   text-align: left;
+  padding-bottom: 5px;
 }
 
 #team span {
   font-weight: bold;
 }
 
-/************************************ FOOTER ************************************/
 #footer {
-  padding: 25px;
-  background: #0c1a31;
-  color: white;
+  background-color: #0c1a31;
+  color: #ffffff;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   text-align: center;
+}
+
+#footer p {
+  padding: 25px;
 }
 
 .email {
-  font-size: 1.3rem;
+  font-size: 20px;
 }
 
 .email a {
-  color: #fff;
-  font-size: 1.3rem;
+  color: #ffffff;
   font-weight: bold;
-  letter-spacing: 0.1rem;
-}
-
-.email a:hover {
   text-decoration: none;
+  letter-spacing: 0.05rem;
 }
 
-.fa-facebook-f,
-.fa-twitter,
-.fa-instagram {
-  color: white;
-  margin-top: 2rem;
-  letter-spacing: 50px;
-}
-
-.social li {
-  display: inline-block;
-}
-
-.copyright {
-  margin-top: 1.7rem;
-  margin-right: auto;
-  margin-left: auto;
+.footer-social .fab {
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 30px;
   text-align: center;
-  font-weight: none;
-  color: #f9f7f6;
+  padding: 10px;
+  width: 50px;
+  margin: 5px 12px;
+  border-radius: 50%;
+}
+
+.fa-facebook-f:hover {
+  color: #395598;
+}
+
+.fa-twitter:hover {
+  color: #1d9eeb;
+}
+
+.fa-instagram:hover {
+  color: #c8245d;
+}
+
+/********************************** Media Queries **********************************/
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 15px;
+  }
+
+  h3 {
+    font-size: 15px;
+  }
+
+  .flex-container {
+    display: block;
+  }
+
+  .flex-item {
+    width: 100%;
+  }
+
+  #gallery img {
+    width: 100%;
+  }
+
+  #team img {
+    width: 200px;
+    height: 200px;
+  }
+
+  #team ul {
+    width: 100%;
+    font-size: 12px;
+    margin: 0 auto;
+  }
+
+  .email {
+    font-size: 16px;
+  }
+
+  #footer p {
+    font-size: 14px;
+  }
+
+  .logo {
+    width: 250px;
+    height: 172px;
+  }
+}
+
+@media (max-width: 780px) {
+  .flex-item {
+    font-size: 14px;
+  }
+
+  #gallery img {
+    width: 100%;
+  }
+
+  #team img {
+    width: 200px;
+    height: 200px;
+  }
+
+  #team ul {
+    width: 100%;
+    padding: none;
+    margin: 0 auto;
+    padding: 0 40px;
+  }
 }
