--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
     ),
-    url("../img/test1.jpg");
+    url("../img/hero-image.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -298,17 +298,24 @@ a:active {
 
 /********************************** Media Queries **********************************/
 
-@media (max-width: 576px) {
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .logo {
+    width: 400px;
+    height: 274px;
+  }
+
   h1 {
-    font-size: 20px;
+    font-size: 30px;
   }
 
-  h2 {
+  .text-box {
     font-size: 20px;
-  }
-
-  h3 {
-    font-size: 20px;
+    margin-inline-start: 20px;
+    margin-inline-end: 20px;
   }
 
   .feature-container {
@@ -319,33 +326,87 @@ a:active {
     width: 100%;
   }
 
-  .gallery img {
-    width: 50%;
+  .contact {
+    display: block;
+    align-items: center;
   }
 
   .footer p {
-    font-size: 14px;
-  }
-
-  .logo {
-    width: 450px;
-    height: 308px;
+    padding: 10px;
   }
 }
 
-@media (max-width: 780px) {
+@media only screen and (max-width: 450px) {
+  .logo {
+    width: 300px;
+    height: 205px;
+  }
+
   h1 {
-    font-size: 45px;
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  h3 {
+    font-size: 17px;
   }
 
   .text-box {
-    font-size: 20px;
-    font-weight: 300;
-    text-align: center;
-    margin: 20px 25px;
+    font-size: 13px;
   }
 
   .gallery img {
-    width: 75%;
+    width: 80%;
+  }
+
+  .features p,
+  .members p,
+  .footer p {
+    font-size: 14px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .logo {
+    width: 500px;
+    height: 342px;
+  }
+
+  h1 {
+    font-size: 38px;
+  }
+
+  .text-box {
+    font-size: 23px;
+    margin-inline-start: 40px;
+    margin-inline-end: 40px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .logo {
+    width: 600px;
+    height: 410px;
+  }
+
+  h1 {
+    font-size: 42px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .logo {
+    width: 680px;
+    height: 465px;
+  }
+
+  h1 {
+    font-size: 50px;
   }
 }
